--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,9 +17,22 @@ GOOGLE_CALLBACK_URL=http://localhost:5000/api/auth/google/callback
 # Frontend URL (for OAuth redirects)
 FRONTEND_URL=http://localhost:5173
 
+# Security Configuration
+# Comma-separated list of allowed origins for CORS (e.g., http://localhost:5173,https://yourdomain.com)
+ALLOWED_ORIGINS=http://localhost:5173
+
+# Cookie domain for production (leave empty for development)
+# Example: .yourdomain.com (with leading dot for subdomains)
+COOKIE_DOMAIN=
+
 # Email Configuration (for OTP)
 EMAIL_USER=your_email@gmail.com
 EMAIL_PASS=your_gmail_app_password
+
+# Cloudinary Configuration (for file uploads and image optimization)
+CLOUDINARY_CLOUD_NAME=your_cloud_name_here
+CLOUDINARY_API_KEY=your_api_key_here
+CLOUDINARY_API_SECRET=your_api_secret_here
 
 # Server Configuration
 PORT=5000
