--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon",
-    "start:prod": "node dist/server.js",
+    "start:prod": "yarn migrate && node dist/server.js",
     "build": "tsc",
     "migrate": "npx sequelize-cli db:migrate",
     "migrate:undo": "npx sequelize-cli db:migrate:undo",
