--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -2,10 +2,7 @@
 nixPkgs = ["nodejs_20", "yarn"]
 
 [phases.build]
-cmds = ["yarn install", "yarn build"]
-
-[phases.deploy]
-cmds = ["yarn start:prod"]
+cmds = ["yarn install"]
 
 [start]
-cmd = "yarn start:prod"
+cmd = "yarn start"
