--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon",
-    "start:prod": "yarn migrate && node dist/server.js",
+    "start": "yarn build && yarn migrate && node dist/server.js",
+    "dev": "nodemon",
     "build": "tsc",
     "migrate": "npx sequelize-cli db:migrate",
     "migrate:undo": "npx sequelize-cli db:migrate:undo",
