--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,6 @@
 # API Base URL
-VITE_API_BASE_URL=http://localhost:5000/api
+# For local development:
+# VITE_API_BASE_URL=http://localhost:5000/api
+
+# For production (Railway deployment):
+VITE_API_BASE_URL=https://spacedly-production.up.railway.app/api
